# python-pathchain

./: LICENSE  Readme.md  pyproject.toml
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  index.rst  package.rst  setup.rst
docs/source/_static/: custom.css
src/pathchain/: __init__.py  path.py
tests/: test_path.py
