[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathchain"
dynamic = ["version"]
description = "A drop-in pathlib.Path replacement with fully chainable methods."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Jan Kolja Wagner", email = "jan.kolja.wagner@posteo.de"}
]
keywords = ["pathlib", "filesystem", "chainable", "paths"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
#Documentation = "..."
Repository = "https://github.com/kolja-wagner/pathchain"


[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "pathchain.__version__"}


[tool.pytest.ini_options]
addopts = "--cov=pathchain"
testpaths = [
    "tests",
]