[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathchain"
dynamic = ["version"]
description = "A drop-in pathlib.Path replacement with fully chainable methods."
readme = "README.md"
requires-python = ">=3.10"
license = {text="MIT"}
#license = "MIT"
#license-files = ["LICENSE"]
authors = [
    { name = "Jan Kolja Wagner", email = "jan.kolja.wagner@posteo.de"}
]
keywords = ["pathlib", "filesystem", "chainable", "paths"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
#Documentation = "..."
Repository = "https://github.com/kolja-wagner/pathchain"


[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
doc = [
    "sphinx>5.3", 
    "pydata-sphinx-theme>0.14",
    "sphinx-copybutton"
    ]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["pathchain"]
include-package-data = false


[tool.setuptools.dynamic]
version = {attr = "pathchain.__version__"}


[tool.pytest.ini_options]
addopts = "--cov=pathchain"
testpaths = [
    "tests",
]